--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 <!--     <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nàng Thơ - Tuyên Ngôn Của Nỗ Lực, Ước Mơ và Khởi Đầu Mới</title>
+    <title>Chúc Chị Thi Tốt</title>
   </head>
   <body>
     <div id="root"></div>
